# pyx

./: .gitignore  README.md  pyproject.toml
pyx/: __init__.py  bundler.py  cli.py  config.py  domain.py  pubspec.py
pyx/adapters/: __init__.py  csharp.py  dart.py
tests/: __init__.py  test_cli_fixtures.py  test_csharp_adapter.py  test_language_selection.py  test_verify_flag.py
tests/fixtures/csharp-project/: SimpleTest.cs  TestProject.csproj
tests/fixtures/dart-project/: pubspec.yaml
tests/fixtures/dart-project/test/: simple_test.dart  utils_test.dart
